@@ -4,6 +4,7 @@ Removal of several deprecated modules/features from previous versions:
     - 'core' (i.e. pre-1.0) library
     - 'collection.bulk_write' and the associated result and exception classes
     - 'vector=', 'vectorize=' and 'vectors=' parameters from collection methods
+    - 'retrieved' (=> `consumed`) and 'collection' (=> `data_source`) for cursors
 Removal of unused imports from toplevel __init__.py (ids, constants, cursors)
 
 v. 1.5.2
